--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^1.0.2",
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@tanstack/react-query": "^4.29.15",
     "@tiptap/extension-document": "^2.0.3",
     "@tiptap/extension-highlight": "^2.0.3",
     "@tiptap/extension-placeholder": "^2.0.3",
@@ -32,6 +33,7 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "electron-router-dom": "^1.0.5",
+    "electron-store": "^8.1.0",
     "phosphor-react": "^1.4.1",
     "react-router-dom": "^6.13.0"
   },
@@ -54,6 +56,7 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
