--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "notion-app",
-  "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
+  "name": "notion",
+  "version": "0.0.0",
+  "description": "A Notion alternative written with Electron",
   "main": "./out/main/index.js",
-  "author": "",
-  "homepage": "",
+  "author": "eddydeveloper.com",
+  "homepage": "https://eddydeveloper.com",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
@@ -15,9 +15,10 @@
     "dev": "electron-vite dev --watch",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
-    "build:win": "npm run build && electron-builder --win --config",
+    "build:win": "electron-vite build && electron-builder --win --config",
     "build:mac": "electron-vite build && electron-builder --mac --config",
-    "build:linux": "electron-vite build && electron-builder --linux --config"
+    "build:linux": "electron-vite build && electron-builder --linux --config",
+    "release": "electron-builder --publish always"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
@@ -35,7 +36,9 @@
     "electron-router-dom": "^1.0.5",
     "electron-store": "^8.1.0",
     "phosphor-react": "^1.4.1",
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.13.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
@@ -52,8 +55,6 @@
     "electron-vite": "^1.0.23",
     "eslint": "^8.42.0",
     "postcss": "^8.4.24",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3",
